--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 
         <!-- Web Fonts  -->
         <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" />
 
         <!-- Libs CSS -->
         <link href="/assets/vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
@@ -37,6 +38,7 @@
     </head>
     <body>
         <div id="app"></div>
+        <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.0/mapbox-gl-directions.js"></script>
 
         <!-- Vendor -->
         <script src="/assets/vendor/jquery/jquery.min.js"></script>
