Finished Show and Welcome page

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,8 @@
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/assets/css/custom.css" />
+        <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet" />
 
         <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.js"></script>
         <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.css" rel="stylesheet" />
